# todolist

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.superpowers/brainstorm/1080-1779266618/content/: layouts.html  modes.html  themes.html
.superpowers/brainstorm/1080-1779266618/state/: server-stopped
docs/superpowers/plans/: 2026-05-20-todolist-widget.md
docs/superpowers/specs/: 2026-05-20-todolist-widget-design.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  storage.rs  tray.rs
src/components/: AddTask.tsx  CategoryTabs.tsx  FullMode.tsx  KanbanBoard.tsx  MiniMode.tsx  Settings.tsx  TaskCard.tsx  TaskDetail.tsx  TaskList.tsx  ThemeProvider.tsx  TitleBar.tsx
src/hooks/: useCategories.ts  useSettings.ts  useTasks.ts  useWindow.ts
src/styles/: global.css
src/styles/themes/: colorful.css  dark.css  glass.css  minimal.css
src/types/: index.ts
